--- a/AnalyzeSpotDicts.ipynb
+++ b/AnalyzeSpotDicts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "19150772",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "b1730c8c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "ca68f255",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,18 @@
      "output_type": "stream",
      "text": [
       "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//.DS_Store/spots/spots.dat\n",
-      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OffSlides//.DS_Store/spots/spots.dat\n"
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//10BarXe/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//Xe10bar/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//10BarXe_Long.zip/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//Air/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//10BarAr/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//Xe6bar/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//Archive.zip/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//10BarXe_Long/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OnSlides//Vac/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OffSlides//.DS_Store/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OffSlides//10BarXe/spots/spots.dat\n",
+      "no file at /Users/ben.jones/Documents/Data/MicroscopePaper/OffSlides//Vac/spots/spots.dat\n"
      ]
     }
    ],
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "3ff3d476",
    "metadata": {},
    "outputs": [
@@ -85,8 +96,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['10BarXe', 'Air', '10barAr', '10BarXe_Long', 'Vac'])\n",
-      "dict_keys(['Heights', 'Times', 'Confs', 'Traces', 'X', 'Y', 'Im', 'IntegralBefore', 'IntegralAfter', 'Integral'])\n"
+      "dict_keys([])\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'Air'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# See what keys we have in these dicts\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(dat\u001b[38;5;241m.\u001b[39mkeys())\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(dat[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAir\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mkeys())\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Air'"
      ]
     }
    ],
@@ -508,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
